# HoanCauAI

./: .env  .env.example  .env.gradio.example  .env.test  .gitignore  BUG_FIX_CVProcessor.md  CHANGELOG.md  CHAT_TAB_FIX_REPORT.md  CV_VIEWER_FEATURES.md  GRADIO_FULL_COMPLETE.md  GRADIO_FULL_README.md  GRADIO_MIGRATION.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_SUCCESS.md  PROJECT_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  WINDOWS_DEPLOYMENT.md  app.py  build_exe.bat  build_windows_exe.py  cli_agent.py  config_info.py  create_portable_app.bat  cv_summary.csv  debug_imports.py  finalize_migration.py  flow_config.json  gradio_app_complete.py  gradio_full.py  gradio_simple.py  health_check.py  launcher.py  main.py  mcp_server.py  pyproject.toml  quick_start_gradio.sh  readme.md  requirements-dev.txt  requirements.txt  (+29 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
api/: README.md  api_server.py
backups/backup_20250703_064431/: backup_info.json  requirements-dev.txt  requirements.txt  setup_linux.sh  setup_window.cmd  start_linux.sh
configs/: pill_recognition_default.json
csv/: cv_analysis.csv  cv_summary.csv
desktop/: README.md  package.json
docs/: DEPLOYMENT_GUIDE.md  README.md  pill_recognition_guide.md
main_engine/: app.py  chat_ui.py  config_info.py  main.py  select_top5.py  utils.py
modules/: auto_fetcher.py  config.py  cv_processor.py  dynamic_llm_client.py  email_fetcher.py  llm_client.py  mcp_server.py  model_fetcher.py  prompts.py  qa_chatbot.py
scripts/: README.md  build-electron.bat  build-electron.sh  chat_tab_demo.py  cli_agent.py  health_check.py  health_check_enhanced.py  quick_check.py  run-all.sh  simple_app.py  simple_check.py  start-api.bat  start-api.sh  stop-all.sh  streamlit_runner.py  update_env.py  update_manager.py
src/: __init__.py
static/: custom.css  style.css
test/: conftest.py  test_app.py  test_cli_agent.py  test_cv_processor.py  test_detect_platform.py  test_dynamic_llm_client.py  test_email_fetcher.py  test_log_handling.py  test_mcp_server.py  test_models.py  test_name_cv_link.py  test_theme_dark.py  test_time_question.py
widget/: README.md  embed.html  widget.html  widget.js
(+78 files in other folders)
